<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solti</string>
    <string name="action_save_profile">Save</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Create an Account</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Find Friends</string>
    <string name="title_activity_edit_friends">Search Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Add Caption</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Solti</string>
    <string name="title_activity_show_profile"></string>

    <string-array name="choose_picture">
        <item>Choose from gallery</item>
    </string-array>

    <string name="title_activity_sign_up_activityfinish">SignUpActivityfinish</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassHint">Confrm Pasword</string>
    <string name="string_enter_message">Enter Message</string>
    <string name="title_activity_radar_fragment">RadarFragment</string>
    <string name="title_activity_notification_fragment">NotificationFragment</string>
    <string name="title_activity_my_profile_fragment">MyProfileFragment</string>
    <string name="confirm_password_error_message">Passwords do not match!! Please recheck your password</string>
    <string name="confirm_password_error_message_title">Password Mismatch</string>
    <string name="gps_seting_open_message">This app requires your approximate location to sign up. Please turn ON GPS settings!!</string>
    <string name="sample_profile_name">Nicole Sherman</string>
    <string name="sample_username">nicole</string>
    <string name="myprofile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_chatroom">ChatroomActivity</string>
    <string name="title_activity_no_connection">No_connection</string>

</resources>
