<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/login_screen_bg"
     >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_centerVertical="true"
        android:text="@string/login_button_label"
        android:textColor="@color/white"
        android:background="@drawable/login_button"
         />

    <ImageView
        android:id="@+id/editProfileImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_screen_app_name" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editProfileImg"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="72dp"
        android:text="@string/sign_up_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_marginBottom="40dp"
        android:paddingLeft="3dp"
        android:ems="10"
        android:background="@drawable/login_editrext_bg"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:paddingLeft="3dp"
        android:background="@drawable/login_editrext_bg"
        android:ems="10"
        android:hint="@string/username_hint" />

</RelativeLayout>
